Fixed Github Pages table alignments

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,3 +7,14 @@
   width: 70%;
   min-width: 620px;
 }
+
+th {
+  font-weight: 700;
+  padding: 0.5em;
+  text-align: left;
+}
+
+td {
+  padding: 0.5em;
+  text-align: left;
+}
